# seat-select

./: .env.example  .eslintrc.js  .gitignore  README.md  babel.config.js  docker-compose.yml  generate_icons.py  generate_seats.py  package.json  postcss.config.js  start-backend.sh  start-celery-services.sh  stop-backend.sh  stop-celery-services.sh  tailwind.config.js  vue.config.js
deploy/: .env.deploy.worker.example  docker-compose.backend.yml  docker-compose.worker.yml
deploy/scripts/: build-images.sh  deploy-backend.sh  deploy-worker.sh
docs/: README.md  e-transfer-payment-plan.md  google_cloud_gmail_setup.md
public/: index.html
public/mock/: README.md  seats.json
scripts/: start-celery-services.sh  stop-celery-services.sh
seat-select-backend/: .dockerignore  .env.example  Dockerfile  main.py  pyproject.toml
seat-select-backend/celery_app/: celery.py
seat-select-backend/celery_app/tasks/: instruction_sender.py  payment_check.py  reservation_cleanup.py
seat-select-backend/src/: config.py  database.py  main.py
seat-select-backend/src/api/: mail.py
seat-select-backend/src/utils/gmail/: gmail_api.py  re_auth.py  templates.py
src/: App.vue  cms.js  directus.js  main.js  router.js  supabase.js
src/components/: ConfirmModal.vue  Header.vue  ImageModal.vue  LanguageSwitcher.vue  MarkdownRenderer.vue  MilkdownCrepeEditor.vue  Toast.vue  VideoModal.vue  loading.vue
src/composables/: useCountdown.js  useDevice.js  useSeatFormat.js
src/i18n/: index.js
src/utils/: toast.js
supabase/: config.toml
supabase/email-template/: magic-link.html
(+87 files in other folders)
